# rust-discord-framework

./: Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: attr_args.rs  lib.rs
src/: command_registry.rs  lib.rs
src/structs/: application_context.rs  command.rs  mod.rs
