[package]
name = "command_framework"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.29.1"
command_framework_macros = { path = "macros" }

[dependencies.serenity]
version = "0.11"
default-features = false
features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "collector",
    "cache"
]

