[package]
name = "command_framework_macros"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.27", features = ["full", "extra-traits"] }
quote = "1.0.32"
proc-macro2 = "1.0.66"